[B2BP-226] Fix regression causing the CTA main action in the io-web page to overlap the header in lg screens

--- a/_sass/io-web.scss
+++ b/_sass/io-web.scss
@@ -1,6 +1,6 @@
 .page-io-web {
 
-  @media screen and (min-width: $grid-breakpoints-sm) {
+  @media screen and (min-width: $grid-breakpoints-lg) {
     margin-top: -100px;
   }
 
